--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body > h1 {
 
 
 /* =============container2======== */
-.container2 div:nth-child(1){
+/* .container2 div:nth-child(1){
     background-color: aqua;
 }
 .container2 div:nth-child(2){
@@ -82,10 +82,10 @@ body > h1 {
 }
 .footer{
     grid-column: span 12;
-}
+} */
 
 /* =============container3======== */
-.container3{
+/* .container3{
     margin-top: 50px;
     border: 3px solid #000;
     height: 800px;
@@ -115,10 +115,10 @@ body > h1 {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
-}
+} */
 
 /* =============container4======== */
-.container4 {
+/* .container4 {
     height: 500px;
     margin-top: 50px;
     display: grid;
@@ -144,4 +144,4 @@ body > h1 {
 }
 .eleven {
     grid-column: span 5;
-}
+} */
