--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body > h1 {
 
 
 /* =============container2======== */
-/* .container2 div:nth-child(1){
+.container2 div:nth-child(1){
     background-color: aqua;
 }
 .container2 div:nth-child(2){
@@ -82,7 +82,7 @@ body > h1 {
 }
 .footer{
     grid-column: span 12;
-} */
+}
 
 /* =============container3======== */
 /* .container3{
