--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body > h1 {
 }
 
 /* =============container3======== */
-/* .container3{
+.container3{
     margin-top: 50px;
     border: 3px solid #000;
     height: 800px;
@@ -115,7 +115,7 @@ body > h1 {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
-} */
+}
 
 /* =============container4======== */
 /* .container4 {
